--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
     
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Portfolio.html">Portfolio</a>
+                        <a class="nav-link" href="./portfolio.html">Portfolio</a>
                     </li>
     
                     <li class="nav-item">
-                        <a class="nav-link" href="./Contact.html">Contact</a>
+                        <a class="nav-link" href="./contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
