--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <div class="card-header">
-                        <a class="card-title">Connect with me</h2>
+                        <a class="card-title font-size-small">Connect with me</h2>
                         </div>
     
                         <div class="card-body">
