--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-5addb6">
-        <a class="navbar-brand font-italic font-weight-bold" href="../Responsive-Portfolio/index.html">Ejeme Aramide Ogedengbe</a>
+        <a class="navbar-brand font-italic font-weight-bold" href="./index.html">Ejeme Aramide Ogedengbe</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -28,15 +28,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../Responsive-Portfolio/index.html">About </a>
+                    <a class="nav-link" href="./index.html">About </a>
 
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../Responsive-Portfolio/portfolio.html">Portfolio</a>
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="../Responsive-Portfolio/contact.html">Contact</a>
+                    <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
         </div>
