Added hangman game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,9 @@
                 <div class="row">
 
                     <div class="col-sm-12">
-                            <img id="image" img src="./assets/images/nature-q-c-640-480-5.jpg" alt="nature" width=40%>
+                        <a href="https://ejeme.github.io/Hangman-Game/">
+                            <img id="hangman-game" img src="./assets/images/hangman.jpg" alt="hangman" width=42%>
+                        </a>
                             <img id="image" img src="./assets/images/fashion-q-c-640-480-3.jpg" alt="fashion" width=40%>
                             <img id="image" img src="./assets/images/food-q-c-640-480-5.jpg" alt="food" width=40%>
                             <img id="image" img src="./assets/images/technics-q-c-640-480-6.jpg" alt="technics" width=40%>
