Added the trivia game and crystal game to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,13 +55,16 @@
 
                     <div class="col-sm-12">
                         <a href="https://ejeme.github.io/Hangman-Game/">
-                            <img id="hangman-game" img src="./assets/images/hangman.jpg" alt="hangman" width=42%>
+                            <img id="hangman-game" img src="./assets/images/hangman.jpg" class="hangman" width=42% >
                         </a>
-                            <img id="image" img src="./assets/images/fashion-q-c-640-480-3.jpg" alt="fashion" width=40%>
-                            <img id="image" img src="./assets/images/food-q-c-640-480-5.jpg" alt="food" width=40%>
-                            <img id="image" img src="./assets/images/technics-q-c-640-480-6.jpg" alt="technics" width=40%>
-                            <img id="image" img src="./assets/images/abstract-q-c-640-480-7.jpg" alt="abstract" width=40%>
-                            <img id="image" img src="./assets/images/tree-q-c-640-480-8.jpg" alt="tree" width=40%>
+                        <a href="https://ejeme.github.io/TriviaGame/">
+                            <img id="trivia-game" img src="./assets/images/sun.webp" class="trivia" width=40% height=41%>
+                        </a>
+                        <a href="https://ejeme.github.io/week-4-game/">
+                            <img id="crystal-collectors" img src="./assets/images/crystal-8.png" class="crystal" width=40%>
+                        </a>
+
+
                     </div>
                 </div>
             </div>
