added the giphytastic project to my portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,6 +63,9 @@
                         <a href="https://ejeme.github.io/week-4-game/">
                             <img id="crystal-collectors" img src="./assets/images/crystal-8.png" class="crystal" width=40%>
                         </a>
+                        <a href="https://ejeme.github.io/GiphyTastic/">
+                            <img id="GiphyTastic" img src="./assets/images/giphy-elephant.webp" class="giphyt" width=40%>
+                        </a>
 
 
                     </div>
