--- a/portfolio.html
+++ b/portfolio.html
@@ -66,7 +66,9 @@
                         <a href="https://ejeme.github.io/GiphyTastic/">
                             <img id="GiphyTastic" img src="./assets/images/giphy-elephant.webp" class="giphyt" width=40%>
                         </a>
-
+                        <a href="https://ejeme.github.io/Train-Scheduler/">
+                            <img id="TrainScheduler" img src="./assets/images/train.jpg" class="train" width=40%>
+                        </a>
 
                     </div>
                 </div>
